<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="ui.MainActivity">

    <TextView

        android:id="@+id/txt_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/label_mounth"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/float_back_mounth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/label_back_mounth"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/txt_month"
        app:layout_constraintEnd_toStartOf="@+id/txt_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_month"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/float_next_mounth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/label_next_mounth"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/txt_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_month"
        app:layout_constraintTop_toTopOf="@+id/txt_month"
        app:srcCompat="@drawable/ic_next"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txt_total_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_total_payable"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_month" />

    <TextView
        android:id="@+id/txt_balance_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/label_balance_to_pay"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@id/txt_total_pay"
        app:layout_constraintTop_toBottomOf="@id/txt_total_pay" />

    <TextView
        android:id="@+id/txt_valor_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/label_value_main"
        android:textColor="#E40000"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_balance_paid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_total_pay" />

    <TextView
        android:id="@+id/txt_valor_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_paid_main"
        android:textColor="#2BC300"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_balance_paid"
        app:layout_constraintEnd_toEndOf="@+id/txt_valor_total"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_pay" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_balance_paid"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_expense"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_expense"
        app:layout_constraintBottom_toTopOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="57dp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#00C2FF"
            app:fabCradleMargin="@dimen/margin_small" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/float_new_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00C2FF"
            android:contentDescription="@string/label_bar_cadastro"
            android:src="@drawable/ic_add"
            app:fabCustomSize="60dp"
            app:layout_anchor="@id/bottom_app_bar"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>